kubernetes-exercise/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-app
  namespace: job-app-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-app
  template:
    metadata:
      labels:
        app: job-app
    spec:
      containers:
      - name: job-app
        image: chandanteekinavar/docker-exercise-app:latest
        ports:
        - containerPort: 8000
