kubernetes-exercise/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: job-app
  namespace: job-app-management
spec:
  # type: NodePort
  selector:
    app: job-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      #nodePort: 30080
